[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ConnectMenu.gd" type="Script" id=1]
[ext_resource path="res://audio-files/sfx_UI_Click.wav" type="AudioStream" id=2]
[ext_resource path="res://audio-files/lvl_2.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio-files/sfx_UI_BackClick.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/DefaultTheme.tres" type="Theme" id=5]

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00938, 0.999507 )
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Tabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 143.0
margin_top = 84.0
margin_right = -144.0
margin_bottom = -84.0

[node name="Options" type="VBoxContainer" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MusicCheck" type="CheckBox" parent="Tabs/Options"]
margin_right = 729.0
margin_bottom = 34.0
pressed = true
text = "Music On"

[node name="SfxCheck" type="CheckBox" parent="Tabs/Options"]
margin_top = 38.0
margin_right = 729.0
margin_bottom = 72.0
pressed = true
text = "Sound Effects On"

[node name="Connection" type="VBoxContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0

[node name="IPInput" type="LineEdit" parent="Tabs/Connection"]
margin_right = 729.0
margin_bottom = 36.0
align = 1
placeholder_text = "Loading Your IP, if hosting wait..."

[node name="Center" type="CenterContainer" parent="Tabs/Connection"]
margin_top = 40.0
margin_right = 729.0
margin_bottom = 72.0

[node name="Btns" type="HBoxContainer" parent="Tabs/Connection/Center"]
margin_left = 300.0
margin_right = 428.0
margin_bottom = 32.0
custom_constants/separation = 16

[node name="Host" type="Button" parent="Tabs/Connection/Center/Btns"]
margin_right = 58.0
margin_bottom = 32.0
disabled = true
text = "Host"

[node name="Join" type="Button" parent="Tabs/Connection/Center/Btns"]
margin_left = 74.0
margin_right = 128.0
margin_bottom = 32.0
text = "Join"

[node name="Instructions" type="VBoxContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="Tabs/Instructions"]
margin_right = 729.0
margin_bottom = 297.0
text = "Welcome! Try to get to the flag in each level. You may need to find some hamsters to get bigger and jump higher, or lose some hamsters to get smaller by running into cages, in order to reach the flag in a given level.

Use the WASD keys to move around with W to jump. If you do not connect with someone online, you can also use the arrow keys as the second player's controls, to play together locally. You jump higher together so you may need a second player to win!

The host can press R to restart the current level at any point."
fit_content_height = true

[node name="Margins" type="MarginContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="UIClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "sfx"

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "bgmusic"

[node name="UIBackClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[connection signal="toggled" from="Tabs/Options/MusicCheck" to="." method="on_toggle_music_on"]
[connection signal="button_up" from="Tabs/Options/SfxCheck" to="." method="on_toggle_sfx_on"]
[connection signal="toggled" from="Tabs/Options/SfxCheck" to="." method="on_toggle_sfx_on"]
[connection signal="pressed" from="Tabs/Connection/Center/Btns/Host" to="." method="on_host"]
[connection signal="pressed" from="Tabs/Connection/Center/Btns/Join" to="." method="on_join"]
